<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">慧为安管通</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="dialog_default_title">提示</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="LOADING">请稍后。。。</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="take_photo_success">拍照成功</string>
    <string name="yhdj_commit_hint">提交中...</string>
    <string name="yhdj_zip_bitmap">图片处理中...</string>
    <string name="ewm_failed">识别失败</string>
    <string name="getyhdetail_failed">获取隐患详情失败!</string>
    <string name="ewm_scanning">识别中...</string>
    <string name="take_photo_max_toast">最多只能拍3张照片</string>
    <string name="photographic">拍照</string>
    <string name="dataLoad">数据加载中</string>
    <string name="renwu">任务</string>
    <string name="yinhuan">隐患</string>
    <string name="kecheng">课程</string>
    <string name="sheshi">设施</string>
    <string name="transaction">事务:</string>
    <string name="missionTitle">任务计划标题:</string>
    <string name="dispathName">分配任务人员:</string>
    <string name="missionLimit">任务完成截止时间：</string>
    <string name="TV_checkDate">检查日期:</string>
    <string name="TV_actionOrgName">执行检查的单位:</string>
    <string name="TV_cpeoname">检查记录人:</string>
    <string name="TV_troubleGrade">隐患等级:</string>
    <string name="TV_safetyTrouble">隐患描述:</string>
    <string name="TV_dScheme">整改建议方案:</string>
    <string name="TV_limitDate">整改时限:</string>
    <string name="TV_LiabelName">整改责任人:</string>
    <string name="TV_alertmphone">整改责任人手机号:</string>
    <string name="TV_currName">课程名称:</string>
    <string name="TV_lesstart">上课时间:</string>
    <string name="TV_lesroom">授课场所:</string>
    <string name="TV_lesmunitue">授课时长:</string>
    <string name="TV_leshour">规定课时:</string>
    <string name="TV_teachemname">授课教师:</string>
    <string name="TV_lescomm">授课内容:</string>
    <string name="TV_stuemname">学员姓名:</string>
    <string name="TV_cpname">设备名称:</string>
    <string name="TV_cpnumber">设备编号:</string>
    <string name="TV_cplocal">设备所在场所:</string>
    <string name="TV_lon">设备所在经度:</string>
    <string name="TV_lat">设备所在维度:</string>
    <string name="TV_checkcount">设备已检查次数:</string>
    <string name="TV_cpmaintain">设备保养负责人:</string>
    <string name="TV_cpmaster">设备负责人:</string>
    <string name="TV_lastcheck">最后一次巡查日期:</string>
    <string name="TV_nextcheck">下一次巡查日期:</string>
    <string name="hon">安全员：</string>
    <string name="time">2014年12月12日</string>
    <string name="name">张宝亮</string>
    <string name="duty">[职责]</string>


    <string-array name="yhjb">
        <item>一般</item>
        <item>较大</item>
        <item>重大</item>
        <item>特大</item>
    </string-array>

    <string-array name="sbzt">
        <item>正常</item>
        <item>待修</item>
        <item>遗失</item>
        <item>损毁</item>
    </string-array>
    <string-array name="sfxx">
        <item>所有</item>
        <item>已学习过</item>
        <item>未学习过</item>
        <item>未达规定学时</item>
    </string-array>
    <string-array name="sfkh">
        <item>所有</item>
        <item>已考核过</item>
        <item>未考核过</item>
        <item>未达60分及格线</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_hello">你好，%1$s ！</string>
    <string name="tv_safety_check_number">-第%1$d条，共%2$d条-</string>
    <string name="org_name_file">%s文件</string>
    <string name="colon">%s：</string>
</resources>