<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction" />

        <TextView
            android:id="@+id/TV_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missionTitle" />

        <TextView
            android:id="@+id/TV_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missionTitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dispathName" />

        <TextView
            android:id="@+id/TV_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dispathName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missionLimit" />

        <TextView
            android:id="@+id/TV_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2019年1月25日" />
    </LinearLayout>


</LinearLayout>